--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,7 +3,7 @@
     <color name="colorPrimary">#6e7471</color>
     <color name="colorPrimaryDark">#414041</color>
     <color name="colorAccent">#00788a</color>
-    <color name="transparente">#00ff4081</color>
+     <color name="transparente">#00ff4081</color>
     <color name="cinza">#cfcece</color>
     <color name="verde">#507e52</color>
     <color name="azul">#4897e1</color>
@@ -23,4 +23,5 @@
     <color name="darkopaco">#d9222222</color>
     <color name="light">#FFEEEEEE</color>
     <color name="vermelho">#dc1e1e</color>
+    <color name="login_texto">#f8d648</color>
 </resources>
