--- a/app/src/main/res/drawable-v21/login_bordas_text.xml
+++ b/app/src/main/res/drawable-v21/login_bordas_text.xml
@@ -2,7 +2,7 @@
 
     android:shape="rectangle"
     >
-<solid android:color="@color/login_texto_transparente"/>
+<solid android:color="@color/login_texto"/>
 
     <corners
         android:bottomLeftRadius="5dp"
