--- a/app/src/main/res/drawable-v21/bordasbotoes.xml
+++ b/app/src/main/res/drawable-v21/bordasbotoes.xml
@@ -2,7 +2,7 @@
 
     android:shape="rectangle"
     >
-<solid android:color="@color/"/>
+<solid android:color="@color/branco"/>
 
     <corners
         android:bottomLeftRadius="5dp"
