--- a/app/src/main/res/layout/login_cassio.xml
+++ b/app/src/main/res/layout/login_cassio.xml
@@ -49,19 +49,23 @@
         android:id="@+id/login_form"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="123dp"
+        android:layout_marginTop="0dp"
+        app:layout_constraintBottom_toTopOf="@+id/textView"
+        app:layout_constraintHorizontal_bias="0.75"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/login_progress">
+        app:layout_constraintTop_toBottomOf="@+id/login_progress"
+        app:layout_constraintVertical_bias="1.0">
 
 
         <LinearLayout
             android:id="@+id/email_login_form"
-            android:layout_width="336dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
 
             android:layout_marginLeft="8dp"
@@ -86,6 +90,7 @@
                     android:hint="@string/prompt_email"
                     android:inputType="textEmailAddress"
                     android:maxLines="1"
+                    android:textColor="@color/colorPrimaryDark"
                     android:singleLine="true" />
 
             </android.support.design.widget.TextInputLayout>
@@ -106,6 +111,7 @@
                     android:imeActionLabel="@string/action_sign_in_short"
                     android:imeOptions="actionUnspecified"
                     android:inputType="textPassword"
+                    android:textColor="@color/colorPrimaryDark"
                     android:maxLines="1"
                     android:singleLine="true" />
 
