--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="colorPrimary">#6e7471</color>
     <color name="colorPrimaryDark">#414041</color>
-    <color name="colorAccent">#00788a</color>
+    <color name="colorAccent">#6e7471</color>
      <color name="transparente">#00ff4081</color>
     <color name="cinza">#cfcece</color>
     <color name="verde">#507e52</color>
